--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <title>Inventaire Poplab avec Supabase</title>
     <link rel="stylesheet" href="style.css">
-    <!-- Assurez-vous que le script Supabase est bien chargé en premier -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+    <script>
+        // Initialiser Supabase avec les bonnes clés
+        const supabaseUrl = 'https://leprhqmbyukywbpgpcmw.supabase.co';
+        const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImxlcHJocW1ieXVreXdicGdwY213Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzE1ODM4NDUsImV4cCI6MjA0NzE1OTg0NX0.HvO07RvQgfuEHfAcQX0P7icdnVPAuvEbJUwAMbqYjdI';
+        const supabase = supabase.createClient(supabaseUrl, supabaseKey);
+    </script>
 </head>
 <body>
     <h1>Inventaire Poplab</h1>
@@ -24,13 +29,7 @@
     </div>
 
     <script>
-        // Initialise Supabase après que le DOM soit chargé
         document.addEventListener("DOMContentLoaded", function() {
-            const supabaseUrl = 'https://leprhqmbyukywbpgpcmw.supabase.co';
-            const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImxlcHJocW1ieXVreXdicGdwY213Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzE1ODM4NDUsImV4cCI6MjA0NzE1OTg0NX0.HvO07RvQgfuEHfAcQX0P7icdnVPAuvEbJUwAMbqYjdI';
-            const supabase = supabase.createClient(supabaseUrl, supabaseKey);
-
-            // Fonction pour charger les articles depuis Supabase
             async function loadInventory() {
                 const inventoryDiv = document.getElementById('inventory');
                 inventoryDiv.innerHTML = ''; // Réinitialiser l'affichage
@@ -49,7 +48,6 @@
                 });
             }
 
-            // Fonction pour créer l'élément HTML pour chaque article
             function createItemElement(id, name, quantity) {
                 const inventoryDiv = document.getElementById('inventory');
                 const itemDiv = document.createElement('div');
@@ -60,19 +58,16 @@
                 nameDisplay.textContent = name;
                 itemDiv.appendChild(nameDisplay);
 
-                // Bouton pour diminuer la quantité
                 const decrementButton = document.createElement('button');
                 decrementButton.textContent = '-';
                 decrementButton.onclick = () => updateQuantity(id, -1);
                 itemDiv.appendChild(decrementButton);
 
-                // Affichage de la quantité
                 const quantityDisplay = document.createElement('span');
                 quantityDisplay.textContent = ` ${quantity} `;
                 quantityDisplay.className = 'quantity';
                 itemDiv.appendChild(quantityDisplay);
 
-                // Bouton pour augmenter la quantité
                 const incrementButton = document.createElement('button');
                 incrementButton.textContent = '+';
                 incrementButton.onclick = () => updateQuantity(id, 1);
@@ -81,7 +76,6 @@
                 inventoryDiv.appendChild(itemDiv);
             }
 
-            // Fonction pour ajouter un nouvel article
             async function addItem() {
                 const newItemName = document.getElementById('newItemName').value.trim();
                 if (!newItemName) {
@@ -104,10 +98,7 @@
                 document.getElementById('newItemName').value = ''; // Réinitialise le champ texte
             }
 
-            // Fonction pour mettre à jour la quantité d'un article
             async function updateQuantity(id, change) {
-                console.log(`Mise à jour de la quantité pour l'ID ${id} de ${change}`);
-                
                 const { data: currentItem, error: fetchError } = await supabase
                     .from('inventoryItems')
                     .select('quantity')
@@ -119,7 +110,7 @@
                     return;
                 }
 
-                const newQuantity = Math.max(0, currentItem.quantity + change); // Empêche quantité négative
+                const newQuantity = Math.max(0, currentItem.quantity + change); 
 
                 const { error: updateError } = await supabase
                     .from('inventoryItems')
@@ -131,13 +122,11 @@
                     return;
                 }
 
-                loadInventory(); // Recharge l'inventaire pour mettre à jour l'affichage
+                loadInventory(); 
             }
 
-            // Lier l'événement de clic au bouton "Ajouter" une fois le DOM chargé
             document.getElementById("addButton").addEventListener("click", addItem);
-            console.log("Événement click lié au bouton 'Ajouter'"); // Vérifie si l'événement est bien lié
-            loadInventory(); // Charger l'inventaire au démarrage
+            loadInventory();
         });
     </script>
 </body>
