--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             // Initialiser Supabase une fois le script chargé
             const supabaseUrl = 'https://leprhqmbyukywbpgpcmw.supabase.co';
             const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImxlcHJocW1ieXVreXdicGdwY213Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzE1ODM4NDUsImV4cCI6MjA0NzE1OTg0NX0.HvO07RvQgfuEHfAcQX0P7icdnVPAuvEbJUwAMbqYjdI';
-            const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
+            const supabase = window.supabase.createClient(https://leprhqmbyukywbpgpcmw.supabase.co, eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImxlcHJocW1ieXVreXdicGdwY213Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzE1ODM4NDUsImV4cCI6MjA0NzE1OTg0NX0.HvO07RvQgfuEHfAcQX0P7icdnVPAuvEbJUwAMbqYjdI);
 
             // Fonction pour charger les articles depuis Supabase
             async function loadInventory() {
