--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Inventaire Poplab avec Supabase</title>
     <link rel="stylesheet" href="style.css">
-    <!-- Charger le script Supabase en mode "defer" pour garantir son chargement complet avant utilisation -->
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js" defer></script>
+    <!-- Charger le script Supabase -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
 </head>
 <body>
     <h1>Inventaire Poplab</h1>
@@ -23,18 +23,23 @@
         <button id="addButton">Ajouter</button>
     </div>
 
-    <!-- Script principal pour gérer l'inventaire, avec initialisation de Supabase après chargement -->
+    <!-- Script principal pour gérer l'inventaire -->
     <script>
         document.addEventListener("DOMContentLoaded", function() {
-            // Initialiser Supabase une fois le script chargé
+            // Initialiser Supabase
             const supabaseUrl = 'https://leprhqmbyukywbpgpcmw.supabase.co';
             const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImxlcHJocW1ieXVreXdicGdwY213Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzE1ODM4NDUsImV4cCI6MjA0NzE1OTg0NX0.HvO07RvQgfuEHfAcQX0P7icdnVPAuvEbJUwAMbqYjdI';
-            const supabase = window.supabase.createClient(https://leprhqmbyukywbpgpcmw.supabase.co, eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImxlcHJocW1ieXVreXdicGdwY213Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzE1ODM4NDUsImV4cCI6MjA0NzE1OTg0NX0.HvO07RvQgfuEHfAcQX0P7icdnVPAuvEbJUwAMbqYjdI);
+            const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
             // Fonction pour charger les articles depuis Supabase
             async function loadInventory() {
                 const inventoryDiv = document.getElementById('inventory');
                 inventoryDiv.innerHTML = ''; // Réinitialiser l'affichage
+
+                if (!supabase) {
+                    console.error("Supabase n'est pas initialisé correctement.");
+                    return;
+                }
 
                 const { data: items, error } = await supabase
                     .from('inventoryItems')
@@ -90,6 +95,11 @@
                     return;
                 }
 
+                if (!supabase) {
+                    console.error("Supabase n'est pas initialisé correctement.");
+                    return;
+                }
+
                 const { data, error } = await supabase
                     .from('inventoryItems')
                     .insert([{ name: newItemName, quantity: 1 }])
@@ -107,6 +117,11 @@
 
             // Fonction pour mettre à jour la quantité d'un article
             async function updateQuantity(id, change) {
+                if (!supabase) {
+                    console.error("Supabase n'est pas initialisé correctement.");
+                    return;
+                }
+
                 const { data: currentItem, error: fetchError } = await supabase
                     .from('inventoryItems')
                     .select('quantity')
