--- a/index.html
+++ b/index.html
@@ -23,60 +23,82 @@
 
     <!-- Script principal pour gérer l'inventaire -->
     <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            // Stockage local des articles (chargé depuis JSON)
+        document.addEventListener("DOMContentLoaded", function () {
+            // Configuration de l'API JSONBin
+            const API_URL = "https://api.jsonbin.io/v3/b/673c9a24e41b4d34e456eab6";
+            const MASTER_KEY = "$2a$10$C2IpRYDMnBVS09UziRhWsuPTWBDUAY3bghoT9Fz9cORd/9QFWGhiW";
+            const ACCESS_KEY = "$2a$10$CK7kuKd1eFHbsVtOb88Jbu4vIKYO5oTKnHfu2t0L.vVU2DP/wHcmW";
             let inventoryItems = [];
 
-            // Fonction pour charger les données initiales depuis le fichier JSON
-            async function loadInitialData() {
+            // Fonction pour charger les données depuis JSONBin
+            async function loadFromJsonBin() {
                 try {
-                    const response = await fetch('data.json');
-                    if (!response.ok) {
-                        throw new Error('Erreur lors du chargement des données');
-                    }
-                    inventoryItems = await response.json();
-                    loadInventory(); // Charger l'inventaire après avoir récupéré les données
+                    const response = await fetch(API_URL, {
+                        method: "GET",
+                        headers: {
+                            "X-Access-Key": ACCESS_KEY, // Lecture avec Access Key
+                        },
+                    });
+                    const data = await response.json();
+                    inventoryItems = data.record || [];
+                    loadInventory(); // Affiche les données dans l'interface
                 } catch (error) {
-                    console.error("Erreur : ", error);
+                    console.error("Erreur lors du chargement des données :", error);
+                }
+            }
+
+            // Fonction pour sauvegarder les données dans JSONBin
+            async function saveToJsonBin() {
+                try {
+                    await fetch(API_URL, {
+                        method: "PUT",
+                        headers: {
+                            "Content-Type": "application/json",
+                            "X-Master-Key": MASTER_KEY, // Écriture avec Master Key
+                        },
+                        body: JSON.stringify(inventoryItems),
+                    });
+                } catch (error) {
+                    console.error("Erreur lors de la sauvegarde des données :", error);
                 }
             }
 
             // Fonction pour afficher les articles de l'inventaire
             function loadInventory() {
-                const inventoryDiv = document.getElementById('inventory');
-                inventoryDiv.innerHTML = ''; // Réinitialiser l'affichage
+                const inventoryDiv = document.getElementById("inventory");
+                inventoryDiv.innerHTML = ""; // Réinitialiser l'affichage
 
-                inventoryItems.forEach(item => {
+                inventoryItems.forEach((item) => {
                     createItemElement(item.id, item.name, item.quantity);
                 });
             }
 
-            // Fonction pour créer l'élément HTML pour chaque article
+            // Fonction pour créer un élément HTML pour chaque article
             function createItemElement(id, name, quantity) {
-                const inventoryDiv = document.getElementById('inventory');
-                const itemDiv = document.createElement('div');
-                itemDiv.className = 'item';
+                const inventoryDiv = document.getElementById("inventory");
+                const itemDiv = document.createElement("div");
+                itemDiv.className = "item";
                 itemDiv.id = id;
 
-                const nameDisplay = document.createElement('span');
+                const nameDisplay = document.createElement("span");
                 nameDisplay.textContent = name;
                 itemDiv.appendChild(nameDisplay);
 
                 // Bouton pour diminuer la quantité
-                const decrementButton = document.createElement('button');
-                decrementButton.textContent = '-';
+                const decrementButton = document.createElement("button");
+                decrementButton.textContent = "-";
                 decrementButton.onclick = () => updateQuantity(id, -1);
                 itemDiv.appendChild(decrementButton);
 
                 // Affichage de la quantité
-                const quantityDisplay = document.createElement('span');
+                const quantityDisplay = document.createElement("span");
                 quantityDisplay.textContent = ` ${quantity} `;
-                quantityDisplay.className = 'quantity';
+                quantityDisplay.className = "quantity";
                 itemDiv.appendChild(quantityDisplay);
 
                 // Bouton pour augmenter la quantité
-                const incrementButton = document.createElement('button');
-                incrementButton.textContent = '+';
+                const incrementButton = document.createElement("button");
+                incrementButton.textContent = "+";
                 incrementButton.onclick = () => updateQuantity(id, 1);
                 itemDiv.appendChild(incrementButton);
 
@@ -85,40 +107,42 @@
 
             // Fonction pour ajouter un nouvel article
             function addItem() {
-                const newItemName = document.getElementById('newItemName').value.trim();
+                const newItemName = document.getElementById("newItemName").value.trim();
                 if (!newItemName) {
                     alert("Veuillez entrer un nom pour l'article.");
                     return;
                 }
 
-                // Création d'un nouvel article et ajout au stockage local
                 const newItem = {
-                    id: Date.now(), // Utilisation de l'horodatage comme identifiant unique
+                    id: Date.now(),
                     name: newItemName,
-                    quantity: 1
+                    quantity: 1,
                 };
+
                 inventoryItems.push(newItem);
+                saveToJsonBin(); // Sauvegarde dans JSONBin
                 createItemElement(newItem.id, newItem.name, newItem.quantity);
-                document.getElementById('newItemName').value = ''; // Réinitialise le champ texte
+                document.getElementById("newItemName").value = ""; // Réinitialiser le champ texte
             }
 
             // Fonction pour mettre à jour la quantité d'un article
             function updateQuantity(id, change) {
-                const item = inventoryItems.find(item => item.id === id);
+                const item = inventoryItems.find((item) => item.id === id);
                 if (!item) {
                     console.error("Article non trouvé");
                     return;
                 }
 
                 item.quantity = Math.max(0, item.quantity + change); // Empêche quantité négative
-                loadInventory(); // Recharge l'inventaire pour mettre à jour l'affichage
+                saveToJsonBin(); // Sauvegarde dans JSONBin
+                loadInventory(); // Recharge l'affichage
             }
 
-            // Lier l'événement de clic au bouton "Ajouter" une fois le DOM chargé
+            // Lier les événements à l'interface
             document.getElementById("addButton").addEventListener("click", addItem);
-            
-            // Charger les données initiales
-            loadInitialData();
+
+            // Charger les données au démarrage
+            loadFromJsonBin();
         });
     </script>
 </body>
