--- a/index.html
+++ b/index.html
@@ -24,19 +24,18 @@
     <!-- Script principal pour gérer l'inventaire -->
     <script>
         document.addEventListener("DOMContentLoaded", function () {
-            // Configuration de l'API JSONBin
             const API_URL = "https://api.jsonbin.io/v3/b/673c9a24e41b4d34e456eab6";
             const MASTER_KEY = "$2a$10$C2IpRYDMnBVS09UziRhWsuPTWBDUAY3bghoT9Fz9cORd/9QFWGhiW";
             const ACCESS_KEY = "$2a$10$CK7kuKd1eFHbsVtOb88Jbu4vIKYO5oTKnHfu2t0L.vVU2DP/wHcmW";
             let inventoryItems = [];
 
-            // Fonction pour charger les données depuis JSONBin
+            // Charger les données depuis JSONBin
             async function loadFromJsonBin() {
                 try {
                     const response = await fetch(API_URL, {
                         method: "GET",
                         headers: {
-                            "X-Access-Key": ACCESS_KEY, // Lecture avec Access Key
+                            "X-Access-Key": ACCESS_KEY,
                         },
                     });
                     const data = await response.json();
@@ -47,14 +46,14 @@
                 }
             }
 
-            // Fonction pour sauvegarder les données dans JSONBin
+            // Sauvegarder les données dans JSONBin
             async function saveToJsonBin() {
                 try {
                     await fetch(API_URL, {
                         method: "PUT",
                         headers: {
                             "Content-Type": "application/json",
-                            "X-Master-Key": MASTER_KEY, // Écriture avec Master Key
+                            "X-Master-Key": MASTER_KEY,
                         },
                         body: JSON.stringify(inventoryItems),
                     });
@@ -63,17 +62,17 @@
                 }
             }
 
-            // Fonction pour afficher les articles de l'inventaire
+            // Afficher les articles dans l'inventaire
             function loadInventory() {
                 const inventoryDiv = document.getElementById("inventory");
-                inventoryDiv.innerHTML = ""; // Réinitialiser l'affichage
+                inventoryDiv.innerHTML = ""; // Réinitialise l'affichage
 
                 inventoryItems.forEach((item) => {
                     createItemElement(item.id, item.name, item.quantity);
                 });
             }
 
-            // Fonction pour créer un élément HTML pour chaque article
+            // Créer un élément HTML pour chaque article
             function createItemElement(id, name, quantity) {
                 const inventoryDiv = document.getElementById("inventory");
                 const itemDiv = document.createElement("div");
@@ -84,28 +83,24 @@
                 nameDisplay.textContent = name;
                 itemDiv.appendChild(nameDisplay);
 
-                // Bouton pour diminuer la quantité
-                const decrementButton = document.createElement("button");
-                decrementButton.textContent = "-";
-                decrementButton.onclick = () => updateQuantity(id, -1);
-                itemDiv.appendChild(decrementButton);
+                // Champ d'entrée pour modifier la quantité
+                const quantityInput = document.createElement("input");
+                quantityInput.type = "number";
+                quantityInput.value = quantity;
+                quantityInput.className = "quantityInput";
+                quantityInput.min = 0;
 
-                // Affichage de la quantité
-                const quantityDisplay = document.createElement("span");
-                quantityDisplay.textContent = ` ${quantity} `;
-                quantityDisplay.className = "quantity";
-                itemDiv.appendChild(quantityDisplay);
+                // Mise à jour en temps réel
+                quantityInput.addEventListener("change", () => {
+                    updateQuantity(id, parseInt(quantityInput.value));
+                });
 
-                // Bouton pour augmenter la quantité
-                const incrementButton = document.createElement("button");
-                incrementButton.textContent = "+";
-                incrementButton.onclick = () => updateQuantity(id, 1);
-                itemDiv.appendChild(incrementButton);
+                itemDiv.appendChild(quantityInput);
 
                 inventoryDiv.appendChild(itemDiv);
             }
 
-            // Fonction pour ajouter un nouvel article
+            // Ajouter un nouvel article
             function addItem() {
                 const newItemName = document.getElementById("newItemName").value.trim();
                 if (!newItemName) {
@@ -122,23 +117,22 @@
                 inventoryItems.push(newItem);
                 saveToJsonBin(); // Sauvegarde dans JSONBin
                 createItemElement(newItem.id, newItem.name, newItem.quantity);
-                document.getElementById("newItemName").value = ""; // Réinitialiser le champ texte
+                document.getElementById("newItemName").value = ""; // Réinitialise le champ texte
             }
 
-            // Fonction pour mettre à jour la quantité d'un article
-            function updateQuantity(id, change) {
+            // Mettre à jour la quantité d'un article
+            function updateQuantity(id, newQuantity) {
                 const item = inventoryItems.find((item) => item.id === id);
                 if (!item) {
                     console.error("Article non trouvé");
                     return;
                 }
 
-                item.quantity = Math.max(0, item.quantity + change); // Empêche quantité négative
+                item.quantity = Math.max(0, newQuantity); // Empêche quantité négative
                 saveToJsonBin(); // Sauvegarde dans JSONBin
-                loadInventory(); // Recharge l'affichage
             }
 
-            // Lier les événements à l'interface
+            // Événement pour le bouton "Ajouter"
             document.getElementById("addButton").addEventListener("click", addItem);
 
             // Charger les données au démarrage
